<resources>
    <string name="app_name">dimmiTu</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="passwordAttuale">Password</string>
    <string name="nuovaPassword">Nuova Password</string>
    <string name="interessi">Interessi</string>
    <string name="film">Film</string>
    <string name="libri">Libri</string>
    <string name="videogiochi">Videogiochi</string>
    <string name="button_salva">SALVA</string>
    <string name="button_annulla">ANNULLA</string>
    <string name="passwordAttualeNota">Leggere password</string>
    <string name="nuova_password">Inserisci nuova password...</string>
    <string name="logout">LogOut</string>
    <string name="button_logout">LOGOUT</string>
    <string name="reset_password">PASSWORD RESET</string>

    <string-array name="colori">

        <item>Seleziona colore
        </item>
        <item>Rosso</item>
        <item>Blu</item>
        <item>Verde</item>
        <item>Arancione</item>
        <item>Giallo</item>
        <item>Viola</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>